--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ pygments: true
 title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
+  name : 1x1 co
+  email : 0@1x1.co
+  github : 1x1dotco
   twitter : username
   feedburner : feedname
 
